##########
### Sylvestre Ledru <sylvestre.ledru@inria.fr>
### INRIA - Scilab 2006 
##########


SLICOT_FORTRAN_SOURCES= src/slicot/sb04pd.f \
src/slicot/ib01ad.f \
src/slicot/tb01wd.f \
src/slicot/ib01py.f \
src/slicot/mb01rx.f \
src/slicot/ib01md.f \
src/slicot/sb02ru.f \
src/slicot/sb04nw.f \
src/slicot/sb10dd.f \
src/slicot/mb04id.f \
src/slicot/sb04ny.f \
src/slicot/ib01qd.f \
src/slicot/sb04px.f \
src/slicot/sb04rw.f \
src/slicot/sb04ry.f \
src/slicot/mb01qd.f \
src/slicot/mb01ud.f \
src/slicot/sb02od.f \
src/slicot/mb02ud.f \
src/slicot/sb10pd.f \
src/slicot/sb03od.f \
src/slicot/mb03ud.f \
src/slicot/sb02sd.f \
src/slicot/ib01oy.f \
src/slicot/sb02ms.f \
src/slicot/ab13md.f \
src/slicot/sb03or.f \
src/slicot/mb03oy.f \
src/slicot/ma02fd.f \
src/slicot/sb03ot.f \
src/slicot/mb04oy.f \
src/slicot/sb04mu.f \
src/slicot/sb03mw.f \
src/slicot/sb02ov.f \
src/slicot/sb03ov.f \
src/slicot/sb04mw.f \
src/slicot/sb03my.f \
src/slicot/sb04my.f \
src/slicot/sb04qu.f \
src/slicot/ib01pd.f \
src/slicot/sb03qy.f \
src/slicot/sb03sx.f \
src/slicot/sb04qy.f \
src/slicot/mb01pd.f \
src/slicot/mb02pd.f \
src/slicot/mb01td.f \
src/slicot/sb02nd.f \
src/slicot/sb04nd.f \
src/slicot/sb02rd.f \
src/slicot/sb04rd.f \
src/slicot/ib01cd.f \
src/slicot/ib01px.f \
src/slicot/ma02ad.f \
src/slicot/ab01od.f \
src/slicot/mb01ru.f \
src/slicot/ma02ed.f \
src/slicot/mb04ny.f \
src/slicot/mb01ry.f \
src/slicot/sb04nv.f \
src/slicot/ib01od.f \
src/slicot/sb04nx.f \
src/slicot/sb10fd.f \
src/slicot/select.f \
src/slicot/sb04rv.f \
src/slicot/mb04kd.f \
src/slicot/sb04py.f \
src/slicot/sb04rx.f \
src/slicot/mb03od.f \
src/slicot/mb04od.f \
src/slicot/mb01sd.f \
src/slicot/sb03md.f \
src/slicot/sb04md.f \
src/slicot/sb02qd.f \
src/slicot/sb10rd.f \
src/slicot/sb04qd.f \
src/slicot/ib01my.f \
src/slicot/ib01bd.f \
src/slicot/mb04iy.f \
src/slicot/sb02mr.f \
src/slicot/ab01nd.f \
src/slicot/sb02mt.f \
src/slicot/sb04mr.f \
src/slicot/sb03mv.f \
src/slicot/sb02ou.f \
src/slicot/mb02qy.f \
src/slicot/sb03ou.f \
src/slicot/sb04qr.f \
src/slicot/sb03mx.f \
src/slicot/ib01nd.f \
src/slicot/sb02oy.f \
src/slicot/sb03oy.f \
src/slicot/sb03qx.f \
src/slicot/ib01rd.f \
src/slicot/sb03sy.f \
src/slicot/mb04nd.f \
src/slicot/mb01rd.f \
src/slicot/mb01vd.f \
src/slicot/sb10qd.f



CACSD_FORTRAN_SOURCES = \
src/fortran/riccpack.f \
src/fortran/jacl2.f \
src/fortran/onface.f \
src/fortran/hhdml.f \
src/fortran/tild.f \
src/fortran/degl2.f \
src/fortran/dqrdc.f \
src/fortran/qvalz.f \
src/fortran/ssxmc.f \
src/fortran/dfrmg.f \
src/fortran/hessl2.f \
src/fortran/ZB03OD.f \
src/fortran/rtitr.f \
src/fortran/watfac.f \
src/fortran/sszer.f \
src/fortran/mzdivq.f \
src/fortran/expan.f \
src/fortran/optml2.f \
src/fortran/wdegre.f \
src/fortran/phi.f \
src/fortran/dgeco.f \
src/fortran/ricd.f \
src/fortran/shrslv.f \
src/fortran/qhesz.f \
src/fortran/rilac.f \
src/fortran/inva.f \
src/fortran/scaleg.f \
src/fortran/arl2.f \
src/fortran/wesidu.f \
src/fortran/dzdivq.f \
src/fortran/arl2a.f \
src/fortran/wgeco.f \
src/fortran/lq.f \
src/fortran/outl2.f \
src/fortran/dhetr.f \
src/fortran/ereduc.f \
src/fortran/domout.f \
src/fortran/polmc.f \
src/fortran/rootgp.f \
src/fortran/feq.f \
src/fortran/dgedi.f \
src/fortran/fout.f \
src/fortran/deg1l2.f \
src/fortran/modul.f \
src/fortran/scapol.f \
src/fortran/wgesl.f \
src/fortran/dlslv.f \
src/fortran/giv.f \
src/fortran/dqrsl.f \
src/fortran/storl2.f \
src/fortran/dqrsm.f \
src/fortran/calsca.f \
src/fortran/qitz.f \
src/fortran/fstair.f \
src/fortran/front.f \
src/fortran/calcsc.f \
src/fortran/wgefa.f

GATEWAY_C_SOURCES = sci_gateway/c/sci_arl2.c \
sci_gateway/c/sci_gspec.c \
sci_gateway/c/sci_rtitr.c \
sci_gateway/c/sci_ereduc.c \
sci_gateway/c/sci_ppol.c \
sci_gateway/c/sci_tzer.c \
sci_gateway/c/sci_contr.c \
sci_gateway/c/sci_fstair.c \
sci_gateway/c/sci_gschur.c \
sci_gateway/c/sci_residu.c \
sci_gateway/c/gw_slicot.c \
sci_gateway/c/gw_cacsd0.c \
sci_gateway/c/sci_freq.c \
sci_gateway/c/gw_cacsd1.c \
sci_gateway/c/sci_rankqr.c \
sci_gateway/c/sci_ltitr.c \
sci_gateway/c/sci_ldiv.c \
sci_gateway/c/gw_cacsd2.c \
sci_gateway/c/gw_cacsd3.c



GATEWAY_FORTRAN_SOURCES = sci_gateway/fortran/sci_f_hinf.f \
sci_gateway/fortran/sci_f_zrankqr.f \
sci_gateway/fortran/sci_f_tzer.f \
sci_gateway/fortran/sci_f_residu.f \
sci_gateway/fortran/sci_f_sylv.f \
sci_gateway/fortran/sci_f_ppol.f \
sci_gateway/fortran/sci_f_freq.f \
sci_gateway/fortran/sci_f_ldiv.f \
sci_gateway/fortran/sci_f_ricc.f \
sci_gateway/fortran/sci_f_sident.f \
sci_gateway/fortran/sci_f_lyap.f \
sci_gateway/fortran/sci_f_rtitr.f \
sci_gateway/fortran/sci_f_sorder.f \
sci_gateway/fortran/sci_f_mucomp.f \
sci_gateway/fortran/sci_f_ltitr.f \
sci_gateway/fortran/sci_f_dhinf.f \
sci_gateway/fortran/sci_f_ricc2.f \
sci_gateway/fortran/sci_f_arl2.f \
sci_gateway/fortran/sci_f_gschur.f \
sci_gateway/fortran/sci_f_ereduc.f \
sci_gateway/fortran/sci_f_findbd.f \
sci_gateway/fortran/sci_f_fstair.f \
sci_gateway/fortran/sci_f_gspec.f \
sci_gateway/fortran/sci_f_linmeq.f \
sci_gateway/fortran/sci_f_rankqr.f

libcacsd_la_FFLAGS= -Iincludes/ 
libcacsd_la_CFLAGS= -Iincludes/ 

lib_LTLIBRARIES = libcacsd.la

libcacsd_la_SOURCES = $(CACSD_FORTRAN_SOURCES) $(SLICOT_FORTRAN_SOURCES) $(GATEWAY_FORTRAN_SOURCES) $(GATEWAY_C_SOURCES)

libcacsd_la_LIBADD = \
	$(top_builddir)/libs/lapack/liblapack.la \
	$(top_builddir)/libs/blas/libblas.la \
	$(top_builddir)/modules/polynomials/libpolynomials.la
#	$(top_builddir)/modules/elementaries_functions/libelementaries_functions.la


# Cyclic deps
#	$(top_builddir)/modules/core/libcore.la 

libcacsd_la_PKGCONFIG = cacsd.pc


datadir=${prefix}/modules
#### Target ######
target=$(datadir)/cacsd


#### cacsd : Conf files ####
libcacsd_la_rootdir = $(target)
libcacsd_la_root_DATA = changelog.txt licence.txt readme.txt VERSION


#### cacsd : Scilab macros ###
libcacsd_la_macrodir = $(target)/macros
libcacsd_la_macro_DATA = macros/krac2.sci \
macros/sysdiag.sci \
macros/linfn.sci \
macros/sm2ss.sci \
macros/parrot.sci \
macros/noisegen.sci \
macros/bloc2ss.sci \
macros/armax.sci \
macros/time_id.sci \
macros/ric_desc.sci \
macros/arsimul.sci \
macros/bloc2exp.sci \
macros/syslin.sci \
macros/findAC.sci \
macros/dbphi.sci \
macros/observer.sci \
macros/dhnorm.sci \
macros/dscr.sci \
macros/p_margin.sci \
macros/freson.sci \
macros/gfrancis.sci \
macros/findx0BD.sci \
macros/abinv.sci \
macros/arl2.sci \
macros/fspec.sci \
macros/des2ss.sci \
macros/mps2linpro.sci \
macros/prbs_a.sci \
macros/cont_frm.sci \
macros/fspecg.sci \
macros/bstap.sci \
macros/obsv_mat.sci \
macros/trianfml.sci \
macros/equil.sci \
macros/sensi.sci \
macros/lqe.sci \
macros/zeropen.sci \
macros/lqg.sci \
macros/ui_observer.sci \
macros/unobs.sci \
macros/minreal.sci \
macros/lincos.sci \
macros/des2tf.sci \
macros/svplot.sci \
macros/copfac.sci \
macros/trfmod.sci \
macros/colinout.sci \
macros/ctr_gram.sci \
macros/cainv.sci \
macros/markp2ss.sci \
macros/repfreq.sci \
macros/cont_mat.sci \
macros/frep2tf.sci \
macros/gamitg.sci \
macros/colregul.sci \
macros/ss2ss.sci \
macros/reglin.sci \
macros/rowinout.sci \
macros/solve.sci \
macros/obs_gram.sci \
macros/h_inf_st.sci \
macros/bilin.sci \
macros/entropy.sci \
macros/ss2tf.sci \
macros/balreal.sci \
macros/leqr.sci \
macros/dtsi.sci \
macros/sysconv.sci \
macros/lyap.sci \
macros/h2norm.sci \
macros/rowregul.sci \
macros/obscont.sci \
macros/calfrq.sci \
macros/pfss.sci \
macros/hankelsv.sci \
macros/inistate.sci \
macros/h_inf.sci \
macros/armac.sci \
macros/phasemag.sci \
macros/kpure.sci \
macros/fourplan.sci \
macros/linf.sci \
macros/csim.sci \
macros/sylv.sci \
macros/epred.sci \
macros/st_ility.sci \
macros/augment.sci \
macros/invrs.sci \
macros/lqg_ltr.sci \
macros/h_cl.sci \
macros/nehari.sci \
macros/cls2dls.sci \
macros/ddp.sci \
macros/sysfact.sci \
macros/h_norm.sci \
macros/arma2p.sci \
macros/gfare.sci \
macros/macglov.sci \
macros/abcd.sci \
macros/acf.sci \
macros/dsimul.sci \
macros/invsyslin.sci \
macros/canon.sci \
macros/findR.sci \
macros/gtild.sci \
macros/stabil.sci \
macros/riccati.sci \
macros/lin.sci \
macros/g_margin.sci \
macros/smga.sci \
macros/specfact.sci \
macros/minss.sci \
macros/narsimul.sci \
macros/lqr.sci \
macros/cmb_lin.sci \
macros/imrep2ss.sci \
macros/trisolve.sci \
macros/flts.sci \
macros/obsvss.sci \
macros/dt_ility.sci \
macros/lft.sci \
macros/leqe.sci \
macros/armax1.sci \
macros/sdiff.sci \
macros/lqg2stan.sci \
macros/contrss.sci \
macros/dcf.sci \
macros/sm2des.sci \
macros/ccontrg.sci \
macros/equil1.sci \
macros/findBDK.sci \
macros/tf2ss.sci \
macros/ss2des.sci \
macros/cfspec.sci \
macros/arhnk.sci \
macros/lcf.sci \
macros/fstabst.sci \
macros/trzeros.sci \
macros/projsl.sci \
macros/syssize.sci \
macros/statgain.sci \
macros/gcare.sci \
macros/tf2des.sci \
macros/ssrand.sci \
macros/findABCD.sci macros/abcd.bin \
macros/abinv.bin \
macros/acf.bin \
macros/arhnk.bin \
macros/arl2.bin \
macros/arma2p.bin \
macros/armac.bin \
macros/armax1.bin \
macros/armax.bin \
macros/arsimul.bin \
macros/augment.bin \
macros/balreal.bin \
macros/bilin.bin \
macros/bloc2exp.bin \
macros/bloc2ss.bin \
macros/bstap.bin \
macros/cainv.bin \
macros/calfrq.bin \
macros/canon.bin \
macros/ccontrg.bin \
macros/cfspec.bin \
macros/cls2dls.bin \
macros/cmb_lin.bin \
macros/colinout.bin \
macros/colregul.bin \
macros/cont_frm.bin \
macros/cont_mat.bin \
macros/contrss.bin \
macros/copfac.bin \
macros/csim.bin \
macros/ctr_gram.bin \
macros/dbphi.bin \
macros/dcf.bin \
macros/ddp.bin \
macros/des2ss.bin \
macros/des2tf.bin \
macros/dhnorm.bin \
macros/dscr.bin \
macros/dsimul.bin \
macros/dt_ility.bin \
macros/dtsi.bin \
macros/entropy.bin \
macros/epred.bin \
macros/equil1.bin \
macros/equil.bin \
macros/findABCD.bin \
macros/findAC.bin \
macros/findBDK.bin \
macros/findR.bin \
macros/findx0BD.bin \
macros/flts.bin \
macros/fourplan.bin \
macros/frep2tf.bin \
macros/freson.bin \
macros/fspecg.bin \
macros/fspec.bin \
macros/fstabst.bin \
macros/gamitg.bin \
macros/gcare.bin \
macros/gfare.bin \
macros/gfrancis.bin \
macros/g_margin.bin \
macros/gtild.bin \
macros/h2norm.bin \
macros/hankelsv.bin \
macros/h_cl.bin \
macros/h_inf.bin \
macros/h_inf_st.bin \
macros/h_norm.bin \
macros/imrep2ss.bin \
macros/inistate.bin \
macros/invrs.bin \
macros/invsyslin.bin \
macros/kpure.bin \
macros/krac2.bin \
macros/lcf.bin \
macros/leqe.bin \
macros/leqr.bin \
macros/lft.bin \
macros/lincos.bin \
macros/linfn.bin \
macros/linf.bin \
macros/lin.bin \
macros/lqe.bin \
macros/lqg2stan.bin \
macros/lqg_ltr.bin \
macros/lqg.bin \
macros/lqr.bin \
macros/lyap.bin \
macros/macglov.bin \
macros/markp2ss.bin \
macros/minreal.bin \
macros/minss.bin \
macros/mps2linpro.bin \
macros/narsimul.bin \
macros/nehari.bin \
macros/noisegen.bin \
macros/obscont.bin \
macros/observer.bin \
macros/obs_gram.bin \
macros/obsv_mat.bin \
macros/obsvss.bin \
macros/parrot.bin \
macros/pfss.bin \
macros/phasemag.bin \
macros/p_margin.bin \
macros/prbs_a.bin \
macros/projsl.bin \
macros/reglin.bin \
macros/repfreq.bin \
macros/riccati.bin \
macros/ric_desc.bin \
macros/rowinout.bin \
macros/rowregul.bin \
macros/sdiff.bin \
macros/sensi.bin \
macros/sm2des.bin \
macros/sm2ss.bin \
macros/smga.bin \
macros/solve.bin \
macros/specfact.bin \
macros/ss2des.bin \
macros/ss2ss.bin \
macros/ss2tf.bin \
macros/ssrand.bin \
macros/stabil.bin \
macros/statgain.bin \
macros/st_ility.bin \
macros/svplot.bin \
macros/sylv.bin \
macros/sysconv.bin \
macros/sysdiag.bin \
macros/sysfact.bin \
macros/syslin.bin \
macros/syssize.bin \
macros/tf2des.bin \
macros/tf2ss.bin \
macros/time_id.bin \
macros/trfmod.bin \
macros/trianfml.bin \
macros/trisolve.bin \
macros/trzeros.bin \
macros/ui_observer.bin \
macros/unobs.bin \
macros/zeropen.bin macros/names macros/lib macros/buildmacros.sce


#### cacsd : init scripts #### 
libcacsd_la_etcdir = $(target)/etc
libcacsd_la_etc_DATA = etc/cacsd.quit etc/cacsd.start

#### cacsd : gateway declaration ####
libcacsd_la_sci_gatewaydir = $(target)/sci_gateway
libcacsd_la_sci_gateway_DATA = sci_gateway/cacsd

#### cacsd : documentation FR #### 
libcacsd_la_helpfrdir = $(target)/help/fr
libcacsd_la_helpfr_DATA = help/fr/colinout.htm \
help/fr/arl2.htm \
help/fr/arma2p.htm \
help/fr/armac.htm \
help/fr/armax1.htm \
help/fr/arma.htm \
help/fr/armax.htm \
help/fr/arsimul.htm \
help/fr/augment.htm \
help/fr/balreal.htm \
help/fr/bilin.htm \
help/fr/bstap.htm \
help/fr/cainv.htm \
help/fr/calfrq.htm \
help/fr/canon.htm \
help/fr/ccontrg.htm \
help/fr/cls2dls.htm \
help/fr/colregul.htm \
help/fr/cont_frm.htm \
help/fr/cont_mat.htm \
help/fr/contrss.htm \
help/fr/contr.htm \
help/fr/copfac.htm \
help/fr/csim.htm \
help/fr/ctr_gram.htm \
help/fr/dbphi.htm \
help/fr/dcf.htm \
help/fr/ddp.htm \
help/fr/des2ss.htm \
help/fr/dt_ility.htm \
help/fr/dhnorm.htm \
help/fr/dscr.htm \
help/fr/dsimul.htm \
help/fr/feedback.htm \
help/fr/dtsi.htm \
help/fr/equil1.htm \
help/fr/equil.htm \
help/fr/findx0BD.htm \
help/fr/findAC.htm \
help/fr/findBDK.htm \
help/fr/findBD.htm \
help/fr/findR.htm \
help/fr/fourplan.htm \
help/fr/flts.htm \
help/fr/gfrancis.htm \
help/fr/frep2tf.htm \
help/fr/freq.htm \
help/fr/freson.htm \
help/fr/fspecg.htm \
help/fr/fstabst.htm \
help/fr/gamitg.htm \
help/fr/gcare.htm \
help/fr/gfare.htm \
help/fr/arhnk.htm \
help/fr/g_margin.htm \
help/fr/gtild.htm \
help/fr/h2norm.htm \
help/fr/hankelsv.htm \
help/fr/h_cl.htm \
help/fr/h_inf_st.htm \
help/fr/h_inf.htm \
help/fr/hinf.htm \
help/fr/h_norm.htm \
help/fr/imrep2ss.htm \
help/fr/inistate.htm \
help/fr/invsyslin.htm \
help/fr/kpure.htm \
help/fr/krac2.htm \
help/fr/lcf.htm \
help/fr/leqr.htm \
help/fr/lft.htm \
help/fr/linfn.htm \
help/fr/linf.htm \
help/fr/linmeq.htm \
help/fr/lin.htm \
help/fr/lqe.htm \
help/fr/lqg2stan.htm \
help/fr/lqg_ltr.htm \
help/fr/lqg.htm \
help/fr/lqr.htm \
help/fr/ltitr.htm \
help/fr/macglov.htm \
help/fr/markp2ss.htm \
help/fr/minreal.htm \
help/fr/minss.htm \
help/fr/mucomp.htm \
help/fr/narsimul.htm \
help/fr/nehari.htm \
help/fr/noisegen.htm \
help/fr/obscont.htm \
help/fr/observer.htm \
help/fr/obs_gram.htm \
help/fr/obsv_mat.htm \
help/fr/obsvss.htm \
help/fr/parrot.htm \
help/fr/pfss.htm \
help/fr/phasemag.htm \
help/fr/p_margin.htm \
help/fr/ppol.htm \
help/fr/prbs_a.htm \
help/fr/projsl.htm \
help/fr/reglin.htm \
help/fr/repfreq.htm \
help/fr/riccati.htm \
help/fr/ricc.htm \
help/fr/ric_desc.htm \
help/fr/rowinout.htm \
help/fr/rowregul.htm \
help/fr/rtitr.htm \
help/fr/sensi.htm \
help/fr/sident.htm \
help/fr/sm2des.htm \
help/fr/sm2ss.htm \
help/fr/sorder.htm \
help/fr/specfact.htm \
help/fr/ss2des.htm \
help/fr/ss2ss.htm \
help/fr/ss2tf.htm \
help/fr/stabil.htm \
help/fr/st_ility.htm \
help/fr/svplot.htm \
help/fr/sysfact.htm \
help/fr/syssize.htm \
help/fr/tf2des.htm \
help/fr/tf2ss.htm \
help/fr/time_id.htm \
help/fr/trzeros.htm \
help/fr/ui_observer.htm \
help/fr/unobs.htm \
help/fr/zeropen.htm \
help/fr/abcd.htm \
help/fr/abinv.htm \
help/fr/whatis.htm \
help/fr/dhinf.htm \
help/fr/des2tf.htm \
help/fr/findABCD.htm


#### cacsd : documentation EN #### 
libcacsd_la_helpendir = $(target)/help/eng
libcacsd_la_helpen_DATA = help/eng/whatis.htm \
help/eng/colinout.htm \
help/eng/abcd.htm \
help/eng/abinv.htm \
help/eng/arhnk.htm \
help/eng/arl2.htm \
help/eng/arma2p.htm \
help/eng/armac.htm \
help/eng/armax1.htm \
help/eng/arma.htm \
help/eng/armax.htm \
help/eng/arsimul.htm \
help/eng/augment.htm \
help/eng/balreal.htm \
help/eng/bilin.htm \
help/eng/bstap.htm \
help/eng/cainv.htm \
help/eng/calfrq.htm \
help/eng/canon.htm \
help/eng/ccontrg.htm \
help/eng/cls2dls.htm \
help/eng/colregul.htm \
help/eng/cont_frm.htm \
help/eng/cont_mat.htm \
help/eng/contrss.htm \
help/eng/contr.htm \
help/eng/copfac.htm \
help/eng/csim.htm \
help/eng/ctr_gram.htm \
help/eng/dbphi.htm \
help/eng/dcf.htm \
help/eng/ddp.htm \
help/eng/des2ss.htm \
help/eng/des2tf.htm \
help/eng/dhinf.htm \
help/eng/dhnorm.htm \
help/eng/dscr.htm \
help/eng/dsimul.htm \
help/eng/dt_ility.htm \
help/eng/dtsi.htm \
help/eng/equil1.htm \
help/eng/equil.htm \
help/eng/feedback.htm \
help/eng/findABCD.htm \
help/eng/findAC.htm \
help/eng/findBDK.htm \
help/eng/findBD.htm \
help/eng/findR.htm \
help/eng/findx0BD.htm \
help/eng/flts.htm \
help/eng/fourplan.htm \
help/eng/frep2tf.htm \
help/eng/freq.htm \
help/eng/freson.htm \
help/eng/fspecg.htm \
help/eng/fstabst.htm \
help/eng/gamitg.htm \
help/eng/gcare.htm \
help/eng/gfare.htm \
help/eng/gfrancis.htm \
help/eng/g_margin.htm \
help/eng/gtild.htm \
help/eng/h2norm.htm \
help/eng/hankelsv.htm \
help/eng/h_cl.htm \
help/eng/h_inf_st.htm \
help/eng/h_inf.htm \
help/eng/hinf.htm \
help/eng/h_norm.htm \
help/eng/imrep2ss.htm \
help/eng/inistate.htm \
help/eng/invsyslin.htm \
help/eng/kpure.htm \
help/eng/krac2.htm \
help/eng/lcf.htm \
help/eng/leqr.htm \
help/eng/lft.htm \
help/eng/linfn.htm \
help/eng/linf.htm \
help/eng/linmeq.htm \
help/eng/lin.htm \
help/eng/lqe.htm \
help/eng/lqg2stan.htm \
help/eng/lqg_ltr.htm \
help/eng/lqg.htm \
help/eng/lqr.htm \
help/eng/ltitr.htm \
help/eng/macglov.htm \
help/eng/markp2ss.htm \
help/eng/minreal.htm \
help/eng/minss.htm \
help/eng/mucomp.htm \
help/eng/narsimul.htm \
help/eng/nehari.htm \
help/eng/noisegen.htm \
help/eng/obscont.htm \
help/eng/observer.htm \
help/eng/obs_gram.htm \
help/eng/obsv_mat.htm \
help/eng/obsvss.htm \
help/eng/parrot.htm \
help/eng/pfss.htm \
help/eng/phasemag.htm \
help/eng/p_margin.htm \
help/eng/ppol.htm \
help/eng/prbs_a.htm \
help/eng/projsl.htm \
help/eng/reglin.htm \
help/eng/repfreq.htm \
help/eng/riccati.htm \
help/eng/ricc.htm \
help/eng/ric_desc.htm \
help/eng/rowinout.htm \
help/eng/rowregul.htm \
help/eng/rtitr.htm \
help/eng/sensi.htm \
help/eng/sident.htm \
help/eng/sm2des.htm \
help/eng/sm2ss.htm \
help/eng/sorder.htm \
help/eng/specfact.htm \
help/eng/ss2des.htm \
help/eng/ss2ss.htm \
help/eng/ss2tf.htm \
help/eng/stabil.htm \
help/eng/st_ility.htm \
help/eng/svplot.htm \
help/eng/sysfact.htm \
help/eng/syssize.htm \
help/eng/tf2des.htm \
help/eng/tf2ss.htm \
help/eng/time_id.htm \
help/eng/trzeros.htm \
help/eng/ui_observer.htm \
help/eng/unobs.htm \
help/eng/zeropen.htm


#### cacsd : include files ####
libcacsd_la_includedir=$(includedir)/cacsd
libcacsd_la_include_HEADERS = includes/gw_cacsd0.h \
includes/gw_cacsd1.h \
includes/gw_cacsd2.h \
includes/gw_cacsd3.h


#### cacsd : demos files ####
libcacsd_la_demosdir=$(target)/demos/
libcacsd_la_demos_DATA = demos/tracking/track.dem \
demos/lqg/lqg.dem \
demos/lqg/scheme.dem \
demos/lqg/lqg2.dem \
demos/flat/car.sci \
demos/flat/truck.sci \
demos/flat/demo_car_fr.htm \
demos/flat/demo_car_eng.htm \
demos/flat/demo_truck_fr.htm \
demos/flat/flat.dem \
demos/flat/fcts.sci \
demos/flat/demo_truck_eng_htm \
demos/pendulum/pendule.dem \
demos/pendulum/simulation.sci \
demos/pendulum/yy \
demos/pendulum/graphics.sci \
demos/robust/como.dem \
demos/robust/mu.dem \
demos/robust/rob.dem \
demos/pid.dem \
demos/control.dem \
demos/cont.dem \
demos/mixed.dem

