##########
### Sylvestre Ledru <sylvestre.ledru@inria.fr>
### INRIA - Scilab 2006 
##########


#### Target ######
target=$(datadir)/modules/compatibility_functions


#### compatibility_functions : Conf files ####
libscicompatibility_functions_la_rootdir = $(target)
libscicompatibility_functions_la_root_DATA = changelog.txt licence.txt readme.txt VERSION.xml


#### compatibility_functions : init scripts #### 
libscicompatibility_functions_la_etcdir = $(target)/etc
libscicompatibility_functions_la_etc_DATA = etc/compatibility_functions.quit etc/compatibility_functions.start

include $(top_srcdir)/Makefile.incl.am
